added changes to fix api-docs
