# routes/index.js
@@ -1,10 +1,11 @@
 const routes = require('express').Router();
-const lesson1Controller = require('../controllers/lesson1');
 const contactsRouter = require('../routes/contacts');
+// const lesson1Controller = require('../controllers/lesson1');
 
-routes.get('/', lesson1Controller.karlaRoute);
-routes.get('/chance', lesson1Controller.chanceRoute);
+// routes.get('/', lesson1Controller.karlaRoute);
+// routes.get('/chance', lesson1Controller.chanceRoute);
+
+routes.use('/api-docs', require('./swagger'));
 routes.use('/contacts', contactsRouter);
-routes.use('/', require('./contacts'));
 
 module.exports = routes;
